# DIT168

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STANDARD.md  CONTRIBUTING.md  Dockerfile  Main.cpp  Makefile  README.md  cmake_install.cmake  controller.cpp  docker-compose.yml  docker_push  docker_push.sh  docker_pushApp.sh  docker_pushInterceptor.sh  docker_pushV2v.sh  docker_pushV2v_ubuntu.sh  docker_pushWebview.sh  docker_pushWebview_ubuntu.sh  messages.odvd  test1.cpp
C++/: Server.cpp
Joystick/: CMakeLists.txt
Joystick/C++/: Server.cpp
Joystick/app/gradle/wrapper/: gradle-wrapper.properties
Joystick/app/src/androidTest/java/com/example/fahddebbiche/controller/: ExampleInstrumentedTest.java
Joystick/app/src/androidTest/java/com/example/fahddebbiche/joystick/: ExampleInstrumentedTest.java
Joystick/app/src/main/java/com/example/fahddebbiche/controller/: JoystickClass.java  MainActivity.java  UDPCommand.java
Joystick/app/src/main/java/com/example/fahddebbiche/joystick/: JoystickClass.java  TCPClient.java
Joystick/app/src/main/res/layout/: activity_connect.xml  activity_main.xml
Joystick/app/src/test/java/com/example/fahddebbiche/joystick/: ExampleUnitTest.java
Joystick/controller/app/: build.gradle  local.properties
Joystick/controller/app/src/test/java/com/example/fahddebbiche/controller/: ExampleUnitTest.java
Joystick/gradle/wrapper/: gradle-wrapper.properties
Joystick/src/: devantech_change_addr.cpp
ProductionCode/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  Test  cmake_install.cmake  test1.cpp
TDD/src/classes/: TestSuite.java  V2V.java
TestEnvironment/: CMakeLists.txt
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
controller/app/: build.gradle  proguard-rules.pro
controller/app/libs/: com.nasable.smoothnetworking-debug.aar
controller/app/src/androidTest/java/com/example/rema/controller/: ExampleInstrumentedTest.java
controller/app/src/main/: AndroidManifest.xml
controller/app/src/main/java/com/example/fahddebbiche/controller/: ConnectActivity.java  JoystickClass.java  MainActivity.java  UDPCommand.java
controller/app/src/main/java/com/example/rema/controller/: ConnectActivity.java  JoystickClass.java  MainActivity.java  TCPClient.java
controller/app/src/main/res/layout/: activity_connect.xml  activity_main.xml
controller/app/src/test/java/com/example/rema/controller/: ExampleUnitTest.java
controller/gradle/wrapper/: gradle-wrapper.properties
dockerfile/: Dockerfile.txt
dockerimages/: dockerfile.txt
main/: AndroidManifest.xml
main/java/com/example/fahddebbiche/joystick/: JoystickClass.java  MainActivity.java  TCPClient.java
main/main/: AndroidManifest.xml
main/main/java/com/example/fahddebbiche/joystick/: MainActivity.java  TCPClient.java
main/res/layout/: activity_main.xml
scripts/: docker_pushImu.sh  docker_pushWebview.sh
src/: .gitmodules  Interceptor.cpp  Messages.odvd  Server.cpp  configuration  docker-compose-app.yml  docker-compose-follower.yml  docker-compose-leader.yml  docker-compose.yml  imu.cpp  imu.hpp  sens.cpp  test1.cpp
src/Ancient/: devantech_change_addr.cpp  sens.cpp
src/Interceptor/: CMakeLists.txt  Dockerfile  Dockerfile.manual  Interceptor.cpp  README.md  messages.odvd
src/app-server/: CMakeLists.txt  Dockerfile  Dockerfile.manual  Server.cpp  messages.odvd
src/imu-microservice/: CMakeLists.txt  Dockerfile.armhf  Dockerfile.manual  Makefile  Makefile.manual  README.md  imu.cpp  imu.hpp  imu_receiver.cpp  messages.odvd
src/imu-receiver-microservice/: CMakeLists.txt  Dockerfile.armhf  Dockerfile.manual  imu_receiver.cpp  messages.odvd
src/imu-receiver-microservicer/: CMakeLists.txt  Dockerfile.manual
src/ps4/: Dockerfile
src/v2v-microservice/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  Dockerfile.manual  Readme.md  V2VService.cpp  V2VService.hpp  messages.odvd
test/: Dockerfile  Messages.odvd  new.cmake
test/TDD/src/classes/: Car.java  PS4Service.java  TestSuite.java  Ultrasonic.java  V2V.java
v2v-protocol/: Dockerfile  V2VService.cpp  V2VService.hpp  messages.odvd
